change my linking to other page

--- a/Animation.html
+++ b/Animation.html
@@ -13,7 +13,7 @@
     <main>
         <!-- first layer -->
         <section class="filter">
-            <div><a href="./home.html">Home</a></div>
+            <div><a href="./index.html">Home</a></div>
             <div> > </div>
             <div><a href="#">Tv Show</a></div>
         </section>
