--- a/movie.html
+++ b/movie.html
@@ -10,7 +10,7 @@
 <body> 
     <main> 
         <section class="filter">
-            <div><a href="./home.html">Home</a></div>
+            <div><a href="./index.html">Home</a></div>
             <div> > </div>
             <div><a href="#">Movie</a></div>
         </section>
